# guru

./: .gitignore  README.md  pyproject.toml
Examples/: 01 Schematics and Simulations.ipynb  01a_Schematics_and_Simulations.py  02_Parametric_Simulation.ipynb  02_Parametric_Simulation1.ipynb  02a_Parametric_Simulation.py  03_Creating_and_Verifying_an_Adder.ipynb
Examples/01_Inverter/: 01_Schematics_and_Simulations.py  01_schematic_and_simulation.ipynb
Examples/01_Schematics_and_Simulations/: 01_Schematics_and_Simulations.ipynb  01_Schematics_and_Simulations.py  README.md
Examples/01a_NCSU_Inverter/: 01a_layout.ipynb  01a_schematic_and_simulation.ipynb
Examples/02_Parametric_Simulation/: 02_Parametric_Simulation.ipynb  02_Parametric_Simulation.py
Examples/adder/: adder.py
examples/01_NCSU_Inverter/: layout_inverter.py  sch_and_sim_inverter.py  sim_inverter.py
examples/02_Parametric_Simulation/: 02_Parametric_Simulation.py  README.md
examples/adder/: adder.py  old_adder.py
guru/: __init__.py  instance.py  layout.py  schematic.py  simulator.py  utils.py
launch_scripts/: CCSinvokeCdfCallbacks.il  kill_virtuosos_and_skillbridge.py  launch_virtuoso_with_skillbridge.py  list_running.py
src/: setup.py
src/virtuosopy/: Instance.py  Layout.py  Schematic.py  Simulator.py  __init__.py  vp_utils.py
virtuosopy/: Schematic.py  Simulator.py  __init__.py
