[build-system]
requires = ["setuptools>=57", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guru"
description = "A python interface to Cadence Virtuoso using skillbridge"
authors = [
    {name = "Rocco Febbo", email = "febbo87@gmail.com"},
    {name = "Sree Nirmillo Biswash Tushar", email = "stushar@vols.utk.edu"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "skillbridge",
    "matplotlib",
    "regex",
    "dataclasses"
]

[tool.setuptools.dynamic]
version = {attr = "guru.version.__version__"}

[project.urls]
Homepage = "https://github.com/rfebbo/guru"

[tool.setuptools.packages.find]
include = ["guru*"]
namespaces = false